fix modal dimension mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,24 +35,31 @@ body {
 }
 .tc {
   width: auto;
-
-  
 }
 
-.app-title {
-  margin-top: 75px;
-  margin-bottom: 50px;
-  font-size: 76px;
-  color: #0ccac4;
-  font-family: "Bigelow Rules";
+.poke-logo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 25px;
+
+  img.logo-1 {
+    width: 120px;
+    height: 60px;
+    display: none;
+  }
 
   @media only screen and (max-width:900px) and (min-width:500px) {
     font-size: 50px;
   }
 
   @media only screen and (max-width:499px) {
-    // grid-template-columns: auto;
     font-size: 40px;
+
+    img {
+      width: 180px;
+      height: 80px;
+    }
   }
 }
 
