--- a/src/components/Evolution/evolution.styles.scss
+++ b/src/components/Evolution/evolution.styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-top: 30px;
+  // margin-top: 30px;
   justify-content: space-around;
   font-family: "Mont-Serrat";
   font-weight: 400;
@@ -33,7 +33,16 @@
   @media only screen and (max-width: 599px) {
     font-size: 70%;
 
-    p {
+    // p {
+    //   display: none;
+    // }
+
+    .level-up {
+      width: 55px;
+      font-size: 90%;
+    }
+
+    .evolves-from {
       display: none;
     }
 
@@ -57,6 +66,14 @@
 
   p {
     margin: 0;
+  }
+
+  @media only screen and (max-width: 599px) {
+
+    img {
+      width: 30px !important;
+      height: 30px !important;
+    }
   }
 }
 
