--- a/src/components/Modal/modal.styles.scss
+++ b/src/components/Modal/modal.styles.scss
@@ -11,7 +11,7 @@
     z-index: 99999999;
     justify-content: center;
     resize: both;
-    // height: 100%;
+    // height: 118vh;
     // overflow-y: scroll;
 
     // height: 100%;
@@ -50,7 +50,8 @@
     @media only screen and (max-width:599px) {
       width: 70vw;
       flex-wrap: nowrap;
-
+      margin-top: 4vh;
+      // height: 700px;
       // overflow-y: auto;
       img {
         width: 20vw;
